--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -2,14 +2,15 @@
 <html lang="pt">
 <head>
   <meta charset="UTF-8">
-  <title>Página Inicial - INATRO</title>
-  <link rel="stylesheet" href="/style.css">
+  <title>Página Inicial</title>
 </head>
 <body>
-  <div class="login-box">
-    <h1>Bem-vindo ao INATRO</h1>
-    <p>Usuário: <%= user %></p>
-    <p>Esta é a página inicial replicada do sistema.</p>
-  </div>
+  <h2>Bem-vindo, <%= user %>!</h2>
+  <ul>
+    <li><a href="/faq">FAQ</a></li>
+    <li><a href="/contact">Contacte-nos</a></li>
+    <li><a href="/mudanca-carta">Mudança de Carta</a></li>
+    <li><a href="/admin">Painel Admin</a></li>
+  </ul>
 </body>
 </html>
