--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head><title>FAQ</title></head>
+<html lang="pt">
+<head>
+  <meta charset="UTF-8" />
+  <title>FAQ - INATRO</title>
+  <link rel="stylesheet" href="/style.css" />
+</head>
 <body>
-  <h2>Perguntas Frequentes</h2>
+  <div class="login-box">
+    <h2>Perguntas Frequentes (FAQ)</h2>
+    <ul>
+      <li>Como posso renovar minha carta?</li>
+      <li>Quais documentos são necessários?</li>
+      <li>Qual o prazo para entrega?</li>
+    </ul>
+    <a href="/">Voltar</a>
+  </div>
 </body>
 </html>
